/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package ModeloAJava;

/**
 *
 * @author gameV
 */
class Promotor extends Empleado {
   public Promotor (){
        
    }
   
   
}
